--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+        <h3 class="nav-title">Ma<span class="color-01">r</span>y</h3>
+            <ul>
+                <li><a class="color-02" href="">Portfolio</a></li>
+                <li><a class="color-02" href="">Blog</a></li>
+                <li><a class="color-02" href=""><button class="button-01 color-03">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings color-02">Hi, I  am</h4>
+                <h1 class="banner-title color-04">Mary Hardy</h1>
+                <p class="banner-description color-05">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="button-01 color-03">Download CV</button>
+                <button class="button-02 color-01 bg-color">Contact</button>
+            </div>
+            <img class="banner-profile-picture" src="./images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
