--- a/index.html
+++ b/index.html
@@ -79,9 +79,83 @@
                 </div>
             </div>
          </section>
-    </main>
-    <footer>
+         <!-- A summary of My Resume sextion starts here -->
+        <h3 class="resume text-center">A summary of My Resume</h3>
+        <div class="resume-container">
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Education</h3>
+                <div class="experience">
+                    <h4 class="experience-title">Master in Computer Engineering</h4>
+                    <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Master in Computer Engineering</h4>
+                    <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Master in Computer Engineering</h4>
+                    <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+            </div>
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Experience</h3>
+                <div class="experience">
+                    <h4 class="experience-title">Sr. Font End Developer</h4>
+                    <h5 class="experience-subtitle">Apple Inc / 2020 - Current</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Jr. Font End Developer</h4>
+                    <h5 class="experience-subtitle">Dribbble Inc / 2018 - 2022</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">HTML Developer</h4>
+                    <h5 class="experience-subtitle">Adobe Inc / 2017 - 2018</h5>
+                    <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center resume-download-cv">
+            <button class="button-01">Download</button>
+        </div>
+        <section>
+             <!-- A summary of My Resume sextion ends here -->
 
+         </section>
+    </main>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="footer-section-titlefooter-">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <img src="./images/facebook.png" alt="">
+                <img src="./images/insta.png" alt="">
+                <img src="./images/twitter.png" alt="">
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" placeholder="Your name"><br>
+                <input type="text" placeholder="Your email"><br>
+                <textarea name="" id="" cols="30" rows="30" placeholder="Message"></textarea><br>
+                <input class="button-01" type="submit" value="submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
